<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_menu_home"
        android:title="@string/nav_item_home" />

    <!--<item
        android:id="@+id/navigation_schemes"
        android:icon="@drawable/redeem"
        android:title="S &amp; D" />-->

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart_black"
        android:title="@string/toolbar_cart" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/toolbar_search" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/account"
        android:title="@string/toolbar_profile" />

</menu>
