<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rounded_corners"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/select_the_file_s_to_upload"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/captureimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:drawableTop="@drawable/ic_photo_camera"
            android:gravity="center"
            android:text="@string/camera"
            android:textSize="@dimen/_8sdp"
            android:textColor="@android:color/black" />


        <TextView
            android:id="@+id/uploadimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:drawableTop="@drawable/ic_gallery"
            android:gravity="center"
            android:textSize="@dimen/_8sdp"
            android:text="@string/gallery"
            android:textColor="@android:color/black" />

    </LinearLayout>


    <TextView
        android:id="@+id/uploadpdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:drawableTop="@drawable/ic_pdf"
        android:gravity="center"
        android:textSize="@dimen/_8sdp"
        android:text="@string/upload_pdf"
        android:textColor="@android:color/black" />


</LinearLayout>

