<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/empty_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/cart"
            android:tint="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_cart_is_empty" />

        <TextView
            android:id="@+id/txtstartshopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_shopping"
            android:textColor="#DA4453"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCartProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/txtContinueShopping"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@color/green"
                        android:gravity="left|center_vertical"
                        android:text="@string/continue_shopping"
                        android:textColor="@color/white"
                        android:textSize="13dp"
                        android:paddingLeft="10dp"
                        android:textStyle="normal"
                        android:layout_weight="1"/>



                </LinearLayout>



                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvCartItemsList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="insideInset"
                    android:scrollbarThumbVertical="@drawable/scrollbar"
                    android:background="@android:color/transparent">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAvailableCL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:background="@color/papaya_whip"
                android:gravity="left|center"
                android:text="@string/available_credit_limit"
                android:textColor="@color/black"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@color/papaya_whip"
                android:gravity="right|center"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOrderFulfilment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableLeft="@drawable/order_book"
                android:gravity="center"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/order_fulfilment"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtConfirmOrder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/confirm_order"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true">

    </FrameLayout>


    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@drawable/bg_product_bottom_sheet"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        tools:ignore="MissingPrefix">
        <!--app:layout_behavior="@string/bottom_sheet_behavior"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_fulfilment"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"/>

            <CheckBox
                android:id="@+id/cbPartialFulfilment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partial_fulfilment" />



            <CheckBox
                android:id="@+id/cbSingleDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_delivery" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/deliveryDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/date"
                    android:focusable="false"
                    android:gravity="left"
                    android:hint="@string/select_delivery_date"
                    style="@style/editTextStyleSmall"
                    android:visibility="gone"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cbVehicleTypePreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type_preference" />

            <com.example.inventrax.falconOMS.util.searchableSpinner.SearchableSpinner
                android:id="@+id/selectVehicleType"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone">

            </com.example.inventrax.falconOMS.util.searchableSpinner.SearchableSpinner>

            <!--<CheckBox
                android:id="@+id/cbBlancketOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blanket_order_for_phased_deliveries" />
-->

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnProceed"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_shape"
                android:text="@string/proceed"
                android:layout_gravity="center"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>