<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvItemsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/availableCL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:background="@color/papaya_whip"
                android:gravity="left|center"
                android:text="@string/available_credit_limit"
                android:textColor="@color/black"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/txtTotalAmt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@color/papaya_whip"
                android:gravity="right|center"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtContinue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/continuetxt"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>