<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_details"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="@dimen/_13sdp"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_gravity="center_horizontal" />

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/_43sdp"
    android:hint="@string/enter_item">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/auto_itemSelection"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:ems="19"
        android:textSize="@dimen/_11sdp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"/>


</android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp">

            <EditText
                android:id="@+id/etQty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textSize="@dimen/_11sdp"
                android:hint="@string/qty"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/black"/>

    </LinearLayout>





</LinearLayout>